refactor(96): Music 코드 리팩토링 (#108)
* Refactor: response using RsData

* Refactor: getArtistGenres remove in search and toptrack

* Refactor: fetchArtistGenres commented out

* Refactor: get response RsData

* Refactor: Alert message

* Feat: Limit record music (20 tracks)

* Refactor: 중복 저장 방지 및 ux 개선

* FeRefactorSearch Bar UX 개선

* Feat: 추천 음악 추가시 기록에 적용

* Feat: Alert 방식 변경해 생성

* Refactor: spotify searchbar 한국어 인식

* Refactor: console > alert

* Refactor: SecurityConfig 복구

* Style: lint